------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Entering Corey's dungeon is now more difficult

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Action system implemented in a slightly different way, which corrects
	  some strange bugs appearing when eating multi-tiled corpses

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Pets and player killed monsters are no longer handled seperatly for score calculation
	* Bug with digging earth tiles 

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Headless zombies can no longer eat or drink.

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Menu picture changed.

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Fixed a fatal bug in the character::PutNear()

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* StepOn effects are now applied when changing areas, too

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Added Vladimir the gigantic carnivorous mutant bunny, which is a loyal
	  companion of Ivan and occupies 2x2 squares at once

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Corrected a bug which caused female cowards of Attnam to scream impolite
	  personal pronouns if their pursuer wasn't seen by the player
	* Hattifattener added to char.pcx by Kahvi
	* Cactus added to item.pcx (a completely wrong place) by Kahvi
	* New monsters added:
	  * Giant dark frog, giant light frog, giant carnivorous plant, black bear,
	    grizzly bear and cave bear
	  * Hedgehog, of which spines do damage to unarmed attackers